<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>BDDPOC</groupId>
  <artifactId>POC</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
  <timestamp>${maven.build.timestamp}</timestamp>
  <maven.build.timestamp.format>yyyy_MM_dd_HH_mm</maven.build.timestamp.format>
  </properties>
  
  <dependencies>
  <dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-java</artifactId>
    <version>1.2.5</version>
  </dependency>
  <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
  <dependency>
    <groupId>org.apache.poi</groupId>
    <artifactId>poi</artifactId>
    <version>3.17</version>
  </dependency>
  <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
  <dependency>
    <groupId>org.apache.poi</groupId>
    <artifactId>poi-ooxml</artifactId>
    <version>3.17</version>
  </dependency>
  <dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-core</artifactId>
    <version>1.2.5</version>
  </dependency>
  <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
  <dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-junit</artifactId>
    <version>1.2.5</version>
    <scope>test</scope>
  </dependency>
  <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-jvm -->
<dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-jvm</artifactId>
    <version>1.2.5</version>
    <type>pom</type>
</dependency>

  
  <dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-testng</artifactId>
    <version>1.2.5</version>
  </dependency>
  <dependency>
    <groupId>org.testng</groupId>
    <artifactId>testng</artifactId>
    <version>6.14.2</version>
    <scope>test</scope>
  </dependency>
  <dependency>
    <groupId>org.seleniumhq.selenium</groupId>
    <artifactId>selenium-java</artifactId>
    <version>3.8.1</version>
  </dependency>
  	<dependency>
    	<groupId>net.masterthought</groupId>
    	<artifactId>maven-cucumber-reporting</artifactId>
    	<version>3.9.0</version>
  	</dependency>
  	<!-- https://mvnrepository.com/artifact/com.vimalselvam/cucumber-extentsreport -->
  	<dependency>
    	<groupId>com.vimalselvam</groupId>
    	<artifactId>cucumber-extentsreport</artifactId>
    	<version>3.0.2</version>
  	</dependency>
  	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
  	<dependency>
    	<groupId>com.aventstack</groupId>
    	<artifactId>extentreports</artifactId>
    	<version>3.1.3</version>
    	<scope>provided</scope>
  	</dependency>
  
  
    <dependency>
     <groupId>com.github.temyers</groupId>
     <artifactId>cucumber-jvm-parallel-plugin</artifactId>
     <version>2.1.0</version>
   </dependency>
   <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-report-plugin -->
	<dependency>
    	<groupId>org.apache.maven.plugins</groupId>
    	<artifactId>maven-surefire-report-plugin</artifactId>
    	<version>2.21.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.github.mkolisnyk/cucumber-report-generator -->
	<dependency>
    	<groupId>com.github.mkolisnyk</groupId>
    	<artifactId>cucumber-report-generator</artifactId>
    	<version>1.3.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.github.mkolisnyk/cucumber-runner -->
	<dependency>
    	<groupId>com.github.mkolisnyk</groupId>
    	<artifactId>cucumber-runner</artifactId>
    	<version>1.3.1</version>
	</dependency>
	</dependencies>
  
  
  
  
  <build>
  	<plugins>
  		<plugin>
    		<groupId>org.apache.maven.plugins</groupId>
    		<artifactId>maven-compiler-plugin</artifactId>
    		<version>3.7.0</version>
    		<configuration>
    		  <source>1.8</source>
    		  <target>1.8</target>
    		  <fork>true</fork>
                <executable>C:\Program Files\Java\jdk1.8.0_111\bin\javac.exe</executable>
    		</configuration>
  		</plugin>
  	    <!-- <plugin>
    	<groupId>org.apache.maven.plugins</groupId>
    		<artifactId>maven-surefire-plugin</artifactId>
    		<version>2.20.1</version>
         <configuration>
         	<testFailureIgnore>true</testFailureIgnore>
         </configuration>
  		</plugin>  -->
 <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-surefire-plugin</artifactId>
    <version>2.21.0</version>
    <configuration>
    	<parallel>classes</parallel>
    	<forkMode>perthread</forkMode>
        <threadCount>3</threadCount>
        <forkCount>3</forkCount>
        <reuseForks>true</reuseForks>
        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
        <includes>
        <include>**/*Runner.java</include>
        </includes>
    </configuration>
  </plugin>
  <!-- <plugin>
    <groupId>com.github.temyers</groupId>
    <artifactId>cucumber-jvm-parallel-plugin</artifactId>
    <version>1.0.1</version>
    <executions>
        <execution>
            <id>generateRunners</id>
            <phase>validate</phase>
            <goals>
                <goal>generateRunners</goal>
            </goals>
            <configuration>
                <glue>stepDef</glue>
                <featuresDirectory>Feature</featuresDirectory>
                <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
                <format>json,html</format>
                <tags>"~@ignored"</tags>
            </configuration>
        </execution>
    </executions>
</plugin> -->
   
  		<plugin>
  		 <groupId>net.masterthought</groupId>
   		 <artifactId>maven-cucumber-reporting</artifactId>
    	<version>3.9.0</version>
    	<executions>
    		<execution>
    		 <id>execution</id>
    		 <phase>verify</phase>
    		 <goals>
    		 	<goal>generate</goal>
    		 	</goals>
    		 	<configuration>
    		 		<checkBuilderResult>false</checkBuilderResult>
    		 		<parallelTesting>true</parallelTesting>
    		 		<projectName>Craftsvilla</projectName>
    		 		<outputDirectory>Reports/${timestamp}</outputDirectory>
    		 		<enableFlashCharts>false</enableFlashCharts>
    		 		<skippedFails>true</skippedFails>
    		 		<!-- <projectName>Craftsvilla</projectName>
    		 		<outputDirectory>${project.build.directory}/cucumber-reports</outputDirectory>
    		 		<cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
    		 		<enableFlashCharts>false</enableFlashCharts>
    		 		<skippedFails>true</skippedFails> -->
    		 	</configuration>
    		</execution>
    	</executions>
  		</plugin>
  		
  	</plugins>
  </build>
</project>